--- a/proyecto-integrador/package.json
+++ b/proyecto-integrador/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
+    "expo-camera": "~13.2.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^8.10.1",
     "react": "18.2.0",
@@ -21,8 +22,7 @@
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10",
-    "expo-camera": "~13.2.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
